✅ Update Instrumented Tests to run in UTP
Now that we have Unified Test Platform, it is easier to run Instrumented
Tests directly in Gradle instead of relying in a separate service in
Continuous Integration. New devices were setup in ready to go!

--- a/.github/workflows/android_tests.yml
+++ b/.github/workflows/android_tests.yml
@@ -16,8 +16,5 @@ jobs:
           java-version: '11'
           distribution: 'adopt'
 
-      - name: Android Emulator Runner
-        uses: ReactiveCircus/android-emulator-runner@v2.24.0
-        with:
-          api-level: 29
-          script: ./gradlew connectedCheck --stacktrace
+      - name: Run instrumented tests
+        run: ./gradlew -Pandroid.experimental.androidTest.useUnifiedTestPlatform=true alkaaDevicesGroupDebugAndroidTest
