--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,7 @@ dependencies {
     implementation project(":data:repository")
     implementation project(":domain")
     implementation project(":features:task")
+    implementation project(":features:alarm-api")
     implementation project(":features:alarm")
     implementation project(":features:category-api")
     implementation project(":features:category")
