♻️ Implement the AlarmPermission API
The concrete implementation of AlarmPermission is now linked to the
interface in the API in order to be available to other feature modules

--- a/features/alarm/build.gradle
+++ b/features/alarm/build.gradle
@@ -9,6 +9,7 @@ android {
 dependencies {
     implementation project(":libraries:core")
     implementation project(":libraries:navigation")
+    implementation project(":features:alarm-api")
     implementation project(":domain")
 
     implementation Deps.coroutines.core
