--- a/features/task/build.gradle
+++ b/features/task/build.gradle
@@ -15,6 +15,7 @@ android {
 
 dependencies {
     implementation project(":features:category-api")
+    implementation project(":features:alarm-api")
     implementation project(":libraries:core")
     implementation project(":domain")
     implementation project(':libraries:designsystem')
