⬆️ Enable Gradle's Type-safe Project Accessors
Enable the new feature on Gradle 7.0 and update all the projects
references form hardcoded to type-safe calls.

--- a/data/local/build.gradle
+++ b/data/local/build.gradle
@@ -18,8 +18,8 @@ android {
 }
 
 dependencies {
-    implementation project(":libraries:core")
-    implementation project(":data:repository")
+    implementation(projects.libraries.core)
+    implementation(projects.data.repository)
 
     implementation Deps.koin.android
     implementation Deps.android.room.runtime
