--- a/libraries/splitInstall/build.gradle
+++ b/libraries/splitInstall/build.gradle
@@ -1,7 +1,7 @@
 apply from: "$rootDir/config/dependencies/feature_dependencies.gradle"
 
 dependencies {
-    implementation project(":libraries:core")
+    implementation(projects.libraries.core)
 
     implementation Deps.android.constraintLayout
     implementation Deps.android.playCore
