--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,19 +52,19 @@ android {
 }
 
 dependencies {
-    implementation project(":libraries:core")
-    implementation project(":libraries:splitInstall")
-    implementation project(':libraries:designsystem')
-    implementation project(":libraries:navigation")
-    implementation project(":data:local")
-    implementation project(":data:repository")
-    implementation project(":domain")
-    implementation project(":features:task")
-    implementation project(":features:alarm")
-    implementation project(":features:category-api")
-    implementation project(":features:category")
-    implementation project(":features:preference")
-    implementation project(":features:search")
+    implementation(projects.libraries.core)
+    implementation(projects.libraries.splitInstall)
+    implementation(projects.libraries.designsystem)
+    implementation(projects.libraries.navigation)
+    implementation(projects.data.local)
+    implementation(projects.data.repository)
+    implementation(projects.domain)
+    implementation(projects.features.task)
+    implementation(projects.features.alarm)
+    implementation(projects.features.categoryApi)
+    implementation(projects.features.category)
+    implementation(projects.features.preference)
+    implementation(projects.features.search)
 
     implementation Deps.compose.navigation
     implementation Deps.compose.activity
