--- a/data/repository/build.gradle
+++ b/data/repository/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'kotlin'
 apply from: "$rootDir/config/quality.gradle"
 
 dependencies {
-    implementation project(":domain")
+    implementation(projects.domain)
 
     implementation Deps.koin.core
     implementation Deps.coroutines.core
