--- a/features/alarm/build.gradle
+++ b/features/alarm/build.gradle
@@ -7,9 +7,9 @@ android {
 }
 
 dependencies {
-    implementation project(":libraries:core")
-    implementation project(":libraries:navigation")
-    implementation project(":domain")
+    implementation(projects.libraries.core)
+    implementation(projects.libraries.navigation)
+    implementation(projects.domain)
 
     implementation Deps.coroutines.core
     implementation Deps.koin.android
