--- a/libraries/test/build.gradle
+++ b/libraries/test/build.gradle
@@ -13,7 +13,7 @@ android {
 }
 
 dependencies {
-    implementation project(":libraries:core")
+    implementation(projects.libraries.core)
 
     api Deps.test.junit
 
