✨ Register Broadcast to receive permission change
Register a BroadcastReceiver to receive when the permission is granted
again by the user in order to reschedule all the future alarms.

--- a/features/alarm/src/main/AndroidManifest.xml
+++ b/features/alarm/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
             android:exported="false">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
-
+                <action android:name="android.app.action.SCHEDULE_EXACT_ALARM_PERMISSION_STATE_CHANGED" />
             </intent-filter>
         </receiver>
     </application>
