👷 Update the command to run the tests in all modules
Today I discovered that the Build Task is running the Test Task in all
but the Kotlin-only modules. In order to fix it, the CI command was
updated to explicitly call the Test one in all executions.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,4 +17,4 @@ jobs:
           distribution: 'adopt'
 
       - name: Build with Gradle
-        run: ./gradlew clean build --no-daemon --parallel build
+        run: ./gradlew clean build test --no-daemon --parallel build
