⬆️ Upgrade Build Gradle version and run command
Build Gradle version updated to latest version matching Android Studio
Canary and the Gradle command based on the Issue Tracker reply

--- a/.github/workflows/android_tests.yml
+++ b/.github/workflows/android_tests.yml
@@ -27,4 +27,4 @@ jobs:
         run: /Users/runner/Library/Android/sdk/emulator/emulator -version
 
       - name: Run instrumented tests
-        run: ./gradlew pixel4api30DebugAndroidTest -Pandroid.sdk.channel=3 --info
+        run: ./gradlew alkaaDevicesGroupDebugAndroidTest -Pandroid.testoptions.manageddevices.emulator.gpu="swiftshader_indirect"
