⬆️ Update AGP to latest 7.3.x
Apparently the 7.3 is the correct version of Android Gradle Plugin to
use with Gradle Managed Virtual Devices. Even though it compiles with
7.2 stable.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,7 @@
 [versions]
 # Project
 android_compile_sdk = "31"
-android_gradle_plugin = "7.2.1"
+android_gradle_plugin = "7.3.0-beta02"
 android_min_sdk = "24"
 android_target_sdk = "31"
 kotlin = "1.5.30"
