👽️ Update Detekt naming rule to ignore test classes
There is no problem for test classes to have more than 30 char

--- a/config/filters/detekt.yml
+++ b/config/filters/detekt.yml
@@ -14,7 +14,7 @@ style:
     active: false
   MagicNumber:
     ignorePropertyDeclaration: true
-    excludes: [ '**/designsystem/**', '**/test/**','**/androidTest/**']
+    excludes: [ '**/designsystem/**', '**/test/**','**/androidTest/**' ]
 
 potential-bugs:
   UnsafeCallOnNullableType:
@@ -26,6 +26,8 @@ naming:
   TopLevelPropertyNaming:
     constantPattern: '[A-Z][A-Za-z0-9]*'
     excludes: [ '**/theme/**', '**/test/**','**/androidTest/**' ]
+  FunctionMaxLength:
+    excludes: [ '**/test/**','**/androidTest/**' ]
   FunctionNaming:
     ignoreAnnotated: [ 'Composable' ]
 
