--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,7 +4,7 @@ android_compile_sdk = "31"
 android_gradle_plugin = "7.3.0-beta05"
 android_min_sdk = "24"
 android_target_sdk = "31"
-kotlin = "1.6.10"
+kotlin = "1.7.0"
 
 # General dependencies
 logging = "2.1.23"
@@ -20,7 +20,8 @@ datastore = "1.0.0"
 glance = "1.0.0-alpha03"
 
 # Compose
-compose = "1.1.1"
+compose = "1.2.1"
+compose_compiler = "1.2.0"
 compose_nav = "2.5.1"
 compose_viewmodel = "2.5.1"
 compose_activity = "1.5.1"
@@ -35,7 +36,7 @@ room = "2.4.3"
 koin = "3.2.0"
 
 # Accompanist
-accompanist = "0.23.1"
+accompanist = "0.25.1"
 
 # Test
 test_junit = "4.13.2"
