--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
 # Project
-android_gradle_plugin = "7.3.0-beta05"
+android_gradle_plugin = "7.3.0-rc01"
 kotlin = "1.7.0"
 
 # General dependencies
