--- a/.github/workflows/android_tests.yml
+++ b/.github/workflows/android_tests.yml
@@ -25,3 +25,11 @@ jobs:
 
       - name: Run instrumented tests
         run: ./gradlew alkaaDevicesGroupDebugAndroidTest -Pandroid.testoptions.manageddevices.emulator.gpu="swiftshader_indirect"
+
+      - name: Save Test Results
+        uses: actions/upload-artifact@v2
+        if: ${{ always() }}
+        with:
+          name: test-results
+          path: /Users/runner/work/alkaa/alkaa/app/build/reports/androidTests/managedDevice/
+          retention-days: 7
