👷 Implement a new Workflow to release app to Google Play
Workflow created to be triggered when a nw tag is released. Then it
will create a new release on GitHub and publish the app on Google Play
Store.

Co-authored-by: Gabriel Bottari <gabriel.bottari.defrance@gmail.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,3 +22,7 @@ jobs:
 
       - name: Build with Gradle
         run: ./gradlew clean build test --no-daemon --parallel build
+        env:
+          ALKAA_KEY_ALIAS: ${{ secrets.ALKAA_KEY_ALIAS }}
+          ALKAA_KEY_PASSWORD: ${{ secrets.ALKAA_KEY_PASSWORD }}
+          ALKAA_KEY_STORE_PASSWORD: ${{ secrets.ALKAA_KEY_STORE_PASSWORD }}
