⏪️ Revert to Gradle Managed Devices (yes, again)
The problem was not related to the Android Gradle Managed Devices after
all. It seems that my new `FlakyTest()` (which was created because some
Compose tests were flaky on CI) made the tests EVEN FLAKIER. That's
ironic. Or not, because the name says that they are flaky... Anyway,
reverting it back.

--- a/.github/workflows/android_tests.yml
+++ b/.github/workflows/android_tests.yml
@@ -7,7 +7,7 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  androidTest:
+  android-test:
     runs-on: macos-latest
 
     steps:
@@ -24,12 +24,7 @@ jobs:
         uses: android-actions/setup-android@v2
 
       - name: Run instrumented tests
-        #run: ./gradlew alkaaDevicesGroupDebugAndroidTest -Pandroid.testoptions.manageddevices.emulator.gpu="swiftshader_indirect"
-        uses: reactivecircus/android-emulator-runner@v2
-        with:
-          api-level: 30
-          target: google_atd
-          script: ./gradlew app:connectedAndroidTest
+        run: ./gradlew alkaaDevicesGroupDebugAndroidTest -Pandroid.testoptions.manageddevices.emulator.gpu="swiftshader_indirect"
 
       - name: Save Test Results
         uses: actions/upload-artifact@v3
