--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -44,6 +44,7 @@ test_mockk = "1.12.7"
 test_uiautomator = "2.2.0"
 test_junitext = "1.1.3"
 test_barista = "4.2.0"
+test_hamcrest = "2.2"
 
 # Quality
 ktlint = "0.46.1"
@@ -73,7 +74,7 @@ compose_icons = { module = "androidx.compose.material:material-icons-extended", 
 compose_navigation = { module = "androidx.navigation:navigation-compose", version.ref = "compose_nav" }
 compose_viewmodel = { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "compose_viewmodel" }
 compose_activity = { module = "androidx.activity:activity-compose", version.ref = "compose_activity" }
-compose_material3 = {module = "androidx.compose.material3:material3", version.ref = "compose_material3"}
+compose_material3 = { module = "androidx.compose.material3:material3", version.ref = "compose_material3" }
 compose_uitest = { module = "androidx.compose.ui:ui-test", version.ref = "compose" }
 compose_junit4 = { module = "androidx.compose.ui:ui-test-junit4", version.ref = "compose" }
 compose_manifest = { module = "androidx.compose.ui:ui-test-manifest", version.ref = "compose" }
@@ -97,7 +98,7 @@ koin_test = { module = "io.insert-koin:koin-test", version.ref = "koin" }
 # Accompanist
 accompanist_animation = { module = "com.google.accompanist:accompanist-navigation-animation", version.ref = "accompanist" }
 accompanist_permission = { module = "com.google.accompanist:accompanist-permissions", version.ref = "accompanist" }
-accompanist_material = {module = "com.google.accompanist:accompanist-navigation-material", version.ref = "accompanist"}
+accompanist_material = { module = "com.google.accompanist:accompanist-navigation-material", version.ref = "accompanist" }
 
 # Test
 test_junit = { module = "junit:junit", version.ref = "test_junit" }
@@ -108,6 +109,7 @@ test_uiautomator = { module = "androidx.test.uiautomator:uiautomator", version.r
 test_junitext = { module = "androidx.test.ext:junit", version.ref = "test_junitext" }
 test_mockk = { module = "io.mockk:mockk", version.ref = "test_mockk" }
 test_barista = { module = "com.adevinta.android:barista", version.ref = "test_barista" }
+test_hamcrest = { module = "org.hamcrest:hamcrest", version.ref = "test_hamcrest" }
 
 # Quality
 ktlint = { module = "com.pinterest:ktlint", version.ref = "ktlint" }
