--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -45,6 +45,7 @@ test_uiautomator = "2.2.0"
 test_junitext = "1.1.3"
 test_barista = "4.2.0"
 test_hamcrest = "2.2"
+test_orchestrator = "1.4.1"
 
 # Quality
 ktlint = "0.47.1"
@@ -110,6 +111,7 @@ test_junitext = { module = "androidx.test.ext:junit", version.ref = "test_junite
 test_mockk = { module = "io.mockk:mockk", version.ref = "test_mockk" }
 test_barista = { module = "com.adevinta.android:barista", version.ref = "test_barista" }
 test_hamcrest = { module = "org.hamcrest:hamcrest", version.ref = "test_hamcrest" }
+test_orchestrator = {module = "androidx.test:orchestrator", version.ref = "test_orchestrator"}
 
 # Quality
 ktlint = { module = "com.pinterest:ktlint", version.ref = "ktlint" }
