--- a/.github/workflows/android_tests.yml
+++ b/.github/workflows/android_tests.yml
@@ -9,6 +9,12 @@ concurrency:
 jobs:
   android-test:
     runs-on: macos-latest
+    timeout-minutes: 80
+
+    strategy:
+      fail-fast: false
+      matrix:
+        api-level: [ 24, 26, 28, 29, 30 ]
 
     steps:
       - name: Checkout
@@ -23,12 +29,24 @@ jobs:
       - name: Setup Android SDK
         uses: android-actions/setup-android@v2
 
+      - name: Determine emulator target
+        id: determine-target
+        env:
+          API_LEVEL: ${{ matrix.api-level }}
+        run: |
+          TARGET="default"
+          if [ "$API_LEVEL" -ge "29" ]; then
+            TARGET="google_apis"
+          fi
+          echo "::set-output name=TARGET::$TARGET"
+
       - name: Run instrumented tests
         # run: ./gradlew alkaaDevicesGroupDebugAndroidTest -Pandroid.testoptions.manageddevices.emulator.gpu="swiftshader_indirect"
         uses: reactivecircus/android-emulator-runner@v2
         with:
-          api-level: 28
-          arch: x86_64
+          api-level: ${{ matrix.api-level }}
+          target: ${{ steps.determine-target.outputs.TARGET }}
+          profile: Galaxy Nexus
           disable-animations: true
           disk-size: 2000M
           heap-size: 600M
