👷 Update script to run ALL Instrumented Tests
Not only :app, please.

--- a/.github/workflows/android_tests.yml
+++ b/.github/workflows/android_tests.yml
@@ -53,7 +53,7 @@ jobs:
           script: |
             adb logcat -c
             adb logcat > logcat.txt &
-            ./gradlew app:connectedAndroidTest --stacktrace
+            ./gradlew connectedAndroidTest --stacktrace
 
       - name: Save Test Results
         uses: actions/upload-artifact@v3
