➕ Add AboutLibraries dependency
New dependency added in the project to display all the dependencies
that Alkaa uses, directly or indirectly, with its respective license
information

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -51,6 +51,9 @@ test_orchestrator = "1.4.1"
 ktlint = "0.47.1"
 detekt = "1.21.0"
 
+# License
+aboutlibraries = "10.5.0"
+
 [libraries]
 # Project
 android_gradle_plugin = { module = "com.android.tools.build:gradle", version.ref = "android_gradle_plugin" }
@@ -111,11 +114,14 @@ test_junitext = { module = "androidx.test.ext:junit", version.ref = "test_junite
 test_mockk = { module = "io.mockk:mockk", version.ref = "test_mockk" }
 test_barista = { module = "com.adevinta.android:barista", version.ref = "test_barista" }
 test_hamcrest = { module = "org.hamcrest:hamcrest", version.ref = "test_hamcrest" }
-test_orchestrator = {module = "androidx.test:orchestrator", version.ref = "test_orchestrator"}
+test_orchestrator = { module = "androidx.test:orchestrator", version.ref = "test_orchestrator" }
 
 # Quality
 ktlint = { module = "com.pinterest:ktlint", version.ref = "ktlint" }
 detekt = { module = "io.gitlab.arturbosch.detekt:detekt-gradle-plugin", version.ref = "detekt" }
+
+# License
+aboutlibraries_plugin = { module = "com.mikepenz.aboutlibraries.plugin:aboutlibraries-plugin", version.ref = "aboutlibraries" }
 
 [bundles]
 compose = ["compose.ui", "compose.material", "compose.tooling", "compose.icons", "compose.material3"]
