👷‍ Executes CI also Pull Request
Today the trigger is only "on push", which is not good when external
contributors tries to submit PRs. Updating to also trigger "on pull
request" and only whe pushing to main.
This configuration is based on the Accompanist one.

--- a/.github/workflows/android_tests.yml
+++ b/.github/workflows/android_tests.yml
@@ -1,6 +1,12 @@
 name: instrumented tests
 
-on: [ push ]
+on:
+  push:
+    branches:
+      - main
+    paths-ignore:
+      - '**.md'
+  pull_request:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
