--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -37,6 +37,7 @@ compose_viewmodel = "2.5.1"
 compose_activity = "1.6.1"
 compose_material3 = "1.0.1"
 compose_icons = "1.3.1"
+compose_windowsize = "1.0.1"
 
 # Room
 room = "2.5.0"
@@ -104,6 +105,7 @@ compose_material3 = { module = "androidx.compose.material3:material3", version.r
 compose_uitest = { module = "androidx.compose.ui:ui-test", version.ref = "compose" }
 compose_junit4 = { module = "androidx.compose.ui:ui-test-junit4", version.ref = "compose" }
 compose_manifest = { module = "androidx.compose.ui:ui-test-manifest", version.ref = "compose" }
+compose_windowsize = { module = "androidx.compose.material3:material3-window-size-class", version.ref = "compose_windowsize" }
 
 # Room
 androidx_room_runtime = { module = "androidx.room:room-runtime", version.ref = "room" }
@@ -149,5 +151,5 @@ composetest = ["compose.uitest", "compose.junit4", "compose.manifest"]
 [plugins]
 kotlin_serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
-dependencyanalysis = {id = "com.autonomousapps.dependency-analysis", version.ref = "dependencyanalysis"}
+dependencyanalysis = { id = "com.autonomousapps.dependency-analysis", version.ref = "dependencyanalysis" }
 
