--- a/.github/workflows/android_tests_aer.yml
+++ b/.github/workflows/android_tests_aer.yml
@@ -1,4 +1,4 @@
-name: Run instrumented tests (AER)
+name: Run instrumented tests
 
 on:
   push:
@@ -13,7 +13,8 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  android-test:
+  android-test-aer:
+    name: "Android Emulator Runner"
     runs-on: macos-latest
     timeout-minutes: 80
 
@@ -45,6 +46,40 @@ jobs:
             adb logcat -c
             adb logcat > logcat.txt &
             ./gradlew connectedAndroidTest --stacktrace
+
+      - name: Save Test Results
+        uses: actions/upload-artifact@v3
+        if: ${{ always() }}
+        with:
+          name: test-results
+          path: |
+            /Users/runner/work/alkaa/alkaa/app/build/reports/androidTests/
+            ./logcat.txt
+          retention-days: 7
+
+  android-test-gmd:
+    name: "Gradle Managed Devices"
+    runs-on: macos-latest
+    timeout-minutes: 80
+
+    strategy:
+      fail-fast: false
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Setup Java
+        uses: actions/setup-java@v3
+        with:
+          java-version: '11'
+          distribution: 'adopt'
+
+      - name: Setup Android SDK
+        uses: android-actions/setup-android@v2
+
+      - name: Run instrumented tests
+        run: ./gradlew alkaaDevicesGroupDebugAndroidTest -Pandroid.testoptions.manageddevices.emulator.gpu="swiftshader_indirect"
 
       - name: Save Test Results
         uses: actions/upload-artifact@v3
