AGP update from 7.4.2 to 8.0.0

--- a/gradle.properties
+++ b/gradle.properties
@@ -14,6 +14,9 @@ android.useAndroidX=true
 org.gradle.jvmargs=-Xmx2048m
 org.gradle.parallel=true
 kotlin.jvm.target.validation.mode = IGNORE
+android.defaults.buildfeatures.buildconfig=true
+android.nonTransitiveRClass=false
+android.nonFinalResIds=false
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
