--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,6 +16,7 @@ logcat = "0.1"
 kotlinx_coroutines = "1.7.3"
 kotlinx_serialization = "1.5.1"
 kotlinx_collections_immutable = "0.3.5"
+kotlinx_datetime = "0.4.0"
 
 # AndroidX
 core = "1.10.1"
@@ -85,6 +86,7 @@ kotlinx_coroutines_core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-c
 kotlinx_coroutines_test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "kotlinx_coroutines" }
 kotlinx_serialization = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinx_serialization" }
 kotlinx_collections_immutable = { module = "org.jetbrains.kotlinx:kotlinx-collections-immutable", version.ref = "kotlinx_collections_immutable" }
+kotlinx_datetime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.ref = "kotlinx_datetime" }
 
 # AndroidX
 androidx_core = { module = "androidx.core:core", version.ref = "core" }
