♻️ Centralize all versions in the Version Catalog file
Previously, some versions were inside the Version Catalog TOML and
others were in the AlkaaVersions file. Since the versioning and
compiling will be even more important now that we will compile with KMP,
all the versions are centralized in a single place.

Also, the VersionCatalogExtensions was broken in several classes to make
it easier to understand. They are: Bundles, Libraries and Versions.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,12 @@
 [versions]
 # Project
+version_code = "20207"
+version_name = "2.2.7"
 android_gradle_plugin = "8.1.0"
 kotlin = "1.8.20"
+android_sdk_compile = "33"
+android_sdk_target = "33"
+android_sdk_min = "24"
 
 # Plugins
 ksp = "1.8.22-1.0.11"
