--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,3 +32,4 @@ jobs:
           ALKAA_KEY_ALIAS: ${{ secrets.ALKAA_KEY_ALIAS }}
           ALKAA_KEY_PASSWORD: ${{ secrets.ALKAA_KEY_PASSWORD }}
           ALKAA_KEY_STORE_PASSWORD: ${{ secrets.ALKAA_KEY_STORE_PASSWORD }}
+          ALKAA_STORE_PATH: ${{ vars.ALKAA_STORE_PATH }}
