--- a/gradle.properties
+++ b/gradle.properties
@@ -10,11 +10,16 @@
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
 android.useAndroidX=true
-
 org.gradle.jvmargs=-Xmx2048m
 org.gradle.parallel=true
-kotlin.jvm.target.validation.mode = IGNORE
+kotlin.jvm.target.validation.mode=IGNORE
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+# Kotlin multiplatform
+org.jetbrains.compose.experimental.uikit.enabled=true
+kotlin.mpp.stability.nowarn=true
+kotlin.mpp.androidSourceSetLayoutVersion=2
+kotlin.native.cacheKind=none
