👷 Setup GitHub Actions cache for Gradle
Cache added to all the jobs to speed up consecutive calls in GitHub
Actions

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,6 +43,9 @@ jobs:
           java-version: '17'
           distribution: 'adopt'
 
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2
+
       - name: Build with Gradle
         run: ./gradlew assemble
 
@@ -69,6 +72,9 @@ jobs:
         with:
           java-version: '17'
           distribution: 'adopt'
+
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2
 
       - name: Build with Gradle
         run: ./gradlew bundleRelease
