--- a/.github/workflows/android_tests.yml
+++ b/.github/workflows/android_tests.yml
@@ -34,6 +34,9 @@ jobs:
       - name: Setup Android SDK
         uses: android-actions/setup-android@v2
 
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2
+
       - name: Run instrumented tests
         uses: reactivecircus/android-emulator-runner@v2
         with:
@@ -77,6 +80,9 @@ jobs:
 
       - name: Setup Android SDK
         uses: android-actions/setup-android@v2
+
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2
 
       - name: Run instrumented tests
         run: ./gradlew cleanManagedDevices --unused-only &&
