--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@ out/
 # Gradle files
 .gradle/
 build/
-*(org.gradle.api.file.Directory
+*(org.gradle.api.file.Directory*
 
 # Local configuration file (sdk path, etc)
 local.properties
