♻️ Convert Design System module to KMP
Converting the Design System module to KMP allowing the MaterialTheme to
be used on iOS. In order to do that, the following changes were
required:

- Remove Android annotation (`@StringRes`) and moving to actual Strings
- Disable `@Preview` annotation since it's not available in commonMain
- Delegate the Material You implementation for each platform

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -51,6 +51,7 @@ koin_core = "3.4.3"
 koin_test = "3.4.3"
 koin_compose = "3.4.6"
 koin_android = "3.4.3"
+koin_compose_jb = "1.0.4"
 
 # Accompanist
 accompanist = "0.32.0"
@@ -127,6 +128,7 @@ koin_core = { module = "io.insert-koin:koin-core", version.ref = "koin_core" }
 koin_android = { module = "io.insert-koin:koin-android", version.ref = "koin_android" }
 koin_compose = { module = "io.insert-koin:koin-androidx-compose", version.ref = "koin_compose" }
 koin_test = { module = "io.insert-koin:koin-test", version.ref = "koin_test" }
+koin_compose_jb = { module = "io.insert-koin:koin-compose", version.ref = "koin_compose_jb" }
 
 # Accompanist
 accompanist_permission = { module = "com.google.accompanist:accompanist-permissions", version.ref = "accompanist" }
