--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -61,6 +61,7 @@ sqldelight = "2.0.0"
 
 # Moko
 moko = "0.16.1"
+moko_resources = "0.23.0"
 
 # AtomicFU
 atomicfu = "0.22.0"
@@ -145,6 +146,10 @@ sqldelight_coroutines = { module = "app.cash.sqldelight:coroutines-extensions", 
 
 # Moko
 moko_mvvm_core = { module = "dev.icerock.moko:mvvm-core", version.ref = "moko" }
+moko_mvvm_compose = { module = "dev.icerock.moko:mvvm-flow-compose", version.ref = "moko" }
+moko_resources_generator = { module = "dev.icerock.moko:resources-generator", version.ref = "moko_resources" }
+moko_resources_core = { module = "dev.icerock.moko:resources", version.ref = "moko_resources" }
+moko_resources_compose = { module = "dev.icerock.moko:resources-compose", version.ref = "moko_resources" }
 
 # Test
 test_junit = { module = "junit:junit", version.ref = "test_junit" }
@@ -176,5 +181,6 @@ kotlin_serialization = { id = "org.jetbrains.kotlin.plugin.serialization", versi
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 dependencyanalysis = { id = "com.autonomousapps.dependency-analysis", version.ref = "dependencyanalysis" }
 sqldelight = { id = "app.cash.sqldelight", version.ref = "sqldelight" }
-compose = {id = "org.jetbrains.compose", version.ref = "jb_compose_compiler" }
+compose = { id = "org.jetbrains.compose", version.ref = "jb_compose_compiler" }
+moko_multiplatform_resources = { id = "dev.icerock.mobile.multiplatform-resources" }
 
