♻️ Convert `category-api` to KMP
API module converted to KMP

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -61,6 +61,7 @@ sqldelight = "2.0.0"
 
 # Moko
 moko = "0.16.1"
+moko_parcelize = "0.9.0"
 moko_resources = "0.23.0"
 
 # AtomicFU
@@ -150,6 +151,7 @@ moko_mvvm_compose = { module = "dev.icerock.moko:mvvm-flow-compose", version.ref
 moko_resources_generator = { module = "dev.icerock.moko:resources-generator", version.ref = "moko_resources" }
 moko_resources_core = { module = "dev.icerock.moko:resources", version.ref = "moko_resources" }
 moko_resources_compose = { module = "dev.icerock.moko:resources-compose", version.ref = "moko_resources" }
+moko_parcelize = { module = "dev.icerock.moko:parcelize", version.ref = "moko_parcelize" }
 
 # Test
 test_junit = { module = "junit:junit", version.ref = "test_junit" }
